.metadata/.plugins/org.eclipse.cdt.ui/ARM_Drivers.build.log
10:20:29 **** Incremental Build of configuration Debug for project ARM_Drivers ****
make all 
Building file: ../src/02-MCAL/02-GPIO/GPIO_config.c
Invoking: Cross ARM GNU C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DOS_USE_SEMIHOSTING -DTRACE -DOS_USE_TRACE_SEMIHOSTING_DEBUG -DSTM32F401xC -DUSE_HAL_DRIVER -DHSE_VALUE=8000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f4-hal" -std=gnu11 -MMD -MP -MF"src/02-MCAL/02-GPIO/GPIO_config.d" -MT"src/02-MCAL/02-GPIO/GPIO_config.o" -c -o "src/02-MCAL/02-GPIO/GPIO_config.o" "../src/02-MCAL/02-GPIO/GPIO_config.c"
../src/02-MCAL/02-GPIO/GPIO_config.c:11:1: error: unknown type name 'pinInfo'
 pinInfo EnabledPins[NUMBER_OF_USED_PINS]=
 ^~~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:13:4: warning: braces around scalar initializer
    {
    ^
../src/02-MCAL/02-GPIO/GPIO_config.c:13:4: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:14:3: error: field name not in record or union initializer
   .Ports  =PORTA,
   ^
../src/02-MCAL/02-GPIO/GPIO_config.c:14:3: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:15:3: error: field name not in record or union initializer
   .Pins   =PIN0,
   ^
../src/02-MCAL/02-GPIO/GPIO_config.c:15:3: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:15:12: warning: excess elements in scalar initializer
   .Pins   =PIN0,
            ^~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:15:12: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:16:3: error: field name not in record or union initializer
   .Modes  =OUTPUT,
   ^
../src/02-MCAL/02-GPIO/GPIO_config.c:16:3: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:16:12: warning: excess elements in scalar initializer
   .Modes  =OUTPUT,
            ^~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:16:12: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:17:3: error: field name not in record or union initializer
   .OTypes =PUSH_PULL,
   ^
../src/02-MCAL/02-GPIO/GPIO_config.c:17:3: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:17:12: warning: excess elements in scalar initializer
   .OTypes =PUSH_PULL,
            ^~~~~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:17:12: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:18:3: error: field name not in record or union initializer
   .OSpeeds =LOW,
   ^
../src/02-MCAL/02-GPIO/GPIO_config.c:18:3: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:18:13: warning: excess elements in scalar initializer
   .OSpeeds =LOW,
             ^~~
../src/02-MCAL/02-GPIO/GPIO_config.c:18:13: note: (near initialization for 'EnabledPins[0]')
../src/02-MCAL/02-GPIO/GPIO_config.c:19:3: error: field name not in record or union initializer
   .PullModes =NOT_USED
   ^
../src/02-MCAL/02-GPIO/GPIO_config.c:19:3: note: (near initialization for 'EnabledPins[0]')
In file included from ../src/02-MCAL/02-GPIO/GPIO_config.c:9:0:
../src/02-MCAL/02-GPIO/GPIO_config.h:9:18: warning: excess elements in scalar initializer
 #define NOT_USED 255
                  ^
../src/02-MCAL/02-GPIO/GPIO_config.c:19:15: note: in expansion of macro 'NOT_USED'
   .PullModes =NOT_USED
               ^~~~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.h:9:18: note: (near initialization for 'EnabledPins[0]')
 #define NOT_USED 255
                  ^
../src/02-MCAL/02-GPIO/GPIO_config.c:19:15: note: in expansion of macro 'NOT_USED'
   .PullModes =NOT_USED
               ^~~~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:21:4: warning: braces around scalar initializer
    {
    ^
../src/02-MCAL/02-GPIO/GPIO_config.c:21:4: note: (near initialization for 'EnabledPins[1]')
../src/02-MCAL/02-GPIO/GPIO_config.c:22:4: error: field name not in record or union initializer
    .Ports =PORTB,
    ^
../src/02-MCAL/02-GPIO/GPIO_config.c:22:4: note: (near initialization for 'EnabledPins[1]')
../src/02-MCAL/02-GPIO/GPIO_config.c:23:4: error: field name not in record or union initializer
    .Pins  =PIN9,
    ^
../src/02-MCAL/02-GPIO/GPIO_config.c:23:4: note: (near initialization for 'EnabledPins[1]')
../src/02-MCAL/02-GPIO/GPIO_config.c:23:12: warning: excess elements in scalar initializer
    .Pins  =PIN9,
            ^~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:23:12: note: (near initialization for 'EnabledPins[1]')
../src/02-MCAL/02-GPIO/GPIO_config.c:24:4: error: field name not in record or union initializer
    .Modes =INPUT,
    ^
../src/02-MCAL/02-GPIO/GPIO_config.c:24:4: note: (near initialization for 'EnabledPins[1]')
../src/02-MCAL/02-GPIO/GPIO_config.c:24:12: warning: excess elements in scalar initializer
    .Modes =INPUT,
            ^~~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:24:12: note: (near initialization for 'EnabledPins[1]')
../src/02-MCAL/02-GPIO/GPIO_config.c:25:4: error: field name not in record or union initializer
    .OTypes =NOT_USED,
    ^
../src/02-MCAL/02-GPIO/GPIO_config.c:25:4: note: (near initialization for 'EnabledPins[1]')
In file included from ../src/02-MCAL/02-GPIO/GPIO_config.c:9:0:
../src/02-MCAL/02-GPIO/GPIO_config.h:9:18: warning: excess elements in scalar initializer
 #define NOT_USED 255
                  ^
../src/02-MCAL/02-GPIO/GPIO_config.c:25:13: note: in expansion of macro 'NOT_USED'
    .OTypes =NOT_USED,
             ^~~~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.h:9:18: note: (near initialization for 'EnabledPins[1]')
 #define NOT_USED 255
                  ^
../src/02-MCAL/02-GPIO/GPIO_config.c:25:13: note: in expansion of macro 'NOT_USED'
    .OTypes =NOT_USED,
             ^~~~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:26:4: error: field name not in record or union initializer
    .OSpeeds =NOT_USED,
    ^
../src/02-MCAL/02-GPIO/GPIO_config.c:26:4: note: (near initialization for 'EnabledPins[1]')
In file included from ../src/02-MCAL/02-GPIO/GPIO_config.c:9:0:
../src/02-MCAL/02-GPIO/GPIO_config.h:9:18: warning: excess elements in scalar initializer
 #define NOT_USED 255
                  ^
../src/02-MCAL/02-GPIO/GPIO_config.c:26:14: note: in expansion of macro 'NOT_USED'
    .OSpeeds =NOT_USED,
              ^~~~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.h:9:18: note: (near initialization for 'EnabledPins[1]')
 #define NOT_USED 255
                  ^
../src/02-MCAL/02-GPIO/GPIO_config.c:26:14: note: in expansion of macro 'NOT_USED'
    .OSpeeds =NOT_USED,
              ^~~~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:27:4: error: field name not in record or union initializer
    .PullModes=FLOATING},
    ^
../src/02-MCAL/02-GPIO/GPIO_config.c:27:4: note: (near initialization for 'EnabledPins[1]')
../src/02-MCAL/02-GPIO/GPIO_config.c:27:15: warning: excess elements in scalar initializer
    .PullModes=FLOATING},
               ^~~~~~~~
../src/02-MCAL/02-GPIO/GPIO_config.c:27:15: note: (near initialization for 'EnabledPins[1]')
make: *** [src/02-MCAL/02-GPIO/subdir.mk:23: src/02-MCAL/02-GPIO/GPIO_config.o] Error 1

10:20:29 Build Finished (took 408ms)

